2012-02-15  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (lf_setlock): Add timeout variable and set before calling
	WFMO.  Drop debug output if process is not available.  Set timeout to
	0 instead.  Document timeout 0 in WFMO comment.
	(lf_getblock): Drop invalid F_POSIX lock type shortcut.  Only return
	overlap if event is not signalled.  Fix comment.

2012-02-14  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* pinfo.cc (_pinfo::set_ctty): Revert 2012-02-07 change to skip
	function if tty in question == our ctty.

	* syscalls.cc (setsid): Avoid two function calls.

	* dtable.cc (dtable::dup_worker): Remove debugging.

	* init.cc (search_for): Calculate for every new process rather than
	using shared value.
	(threadfunc_ix): Fill in for every new process rather than sing shared
	value.

2012-02-14  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_cygdrive::fstat): Don't bother to
	set st_nlink correctly, just set it to 1 to avoid potential network
	timeouts.

2012-02-14  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (lf_setlock): Don't close waited lock object handle before
	we own the node lock.  Fix comment.

2012-02-14  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.cc (init_cygheap::init_installation_root): Convert function
	init_installation_root into a cygheap method.
	* cygheap.h (struct init_cygheap): Move installation_root,
	installation_key, and installation_key_buf from shared
	.cygwin_dll_common DLL section to cygheap.  Declare new method
	init_installation_root.
	* dtable.cc (handle_to_fn): Accommodate the move of installation strings
	to the cygheap.
	* external.cc (cygwin_internal): Ditto.
	* fhandler_console.cc (fhandler_console::open_shared_console): Ditto.
	* fhandler_mailslot.cc (fhandler_mailslot::get_object_attr): Ditto.
	* fhandler_tty.cc: Ditto, throughout.
	* mount.cc (mount_info::init): Ditto.
	* pipe.cc (fhandler_pipe::create): Ditto.
	* shared.cc: Ditto, throughout.