@@ -1,3 +1,10 @@
+2012-02-15  Christopher Faylor  <me.cygwin2012@cgf.cx>
+
+	* smallprint.cc (tmpbuf): Declare new class holding a static buffer,
+	protected by a lock.
+	(__small_vsprintf): Use tmpbuf to hold large buffer.
+	(__small_vswprintf): Ditto.
+
 2012-02-15  Corinna Vinschen  <corinna@vinschen.de>
 
 	* flock.cc (lf_setlock): Add timeout variable and set before calling
